# minesweeper

./: .gitignore  .gitmodules  CONTRIBUTING.md  Minesweeper.podspec  README.md  package.json  react-native.config.js  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/minesweeper/: MinesweeperModule.kt  MinesweeperPackage.kt
cpp/: minesweeper.cpp  minesweeper.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/MinesweeperExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/MinesweeperExample.xcodeproj/: project.pbxproj
example/ios/MinesweeperExample.xcodeproj/xcshareddata/xcschemes/: MinesweeperExample.xcscheme
example/src/: App.tsx
example/windows/: MinesweeperExample.sln
example/windows/MinesweeperExample/: MinesweeperExample.cpp  MinesweeperExample.vcxproj  MinesweeperExample.vcxproj.filters  resource.h
example/windows/MinesweeperExample.Package/: MinesweeperExample.Package.wapproj  Package.appxmanifest
ios/: Minesweeper.h  Minesweeper.mm  MinesweeperExport.h  MinesweeperExport.mm
src/: NativeMinesweeper.ts  index.tsx
windows/: Minesweeper.sln
windows/Minesweeper/: Minesweeper.cpp  Minesweeper.h  Minesweeper.vcxproj  Minesweeper.vcxproj.filters  ReactPackageProvider.cpp  ReactPackageProvider.h  ReactPackageProvider.idl  packages.lock.json  resource.h
windows/Minesweeper/codegen/: NativeMinesweeperDataTypes.g.h  NativeMinesweeperSpec.g.h  RNMinesweeperSpecJSI-generated.cpp  RNMinesweeperSpecJSI.h
(+2 files in other folders)
